--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,32 @@
-python==3.9.19
-numpy==1.26.4
-pandas==2.2.2
-matplotlib==3.8.4
-seaborn==0.13.2
-sweetviz==2.3.1
-unidecode==1.2.0
-pyyaml==6.0.1
-shap==0.42.1
-lightgbm==4.5.0
-japanize_matplotlib==1.1.3
-optuna==3.6.1
-folium
-torch
-statsmodels
-# folium==0.17.0
-# torch==2.2.2
-# statsmodels==0.14.4
-umap-learn==0.5.9.post2
-sentence-transformers>=3.3.1
-polars==1.33.1
-datasets==4.0.0
-python-box==7.3.2
-sentencepiece==0.2.1
+# Python version requirement: 3.11
+# Tested with Python 3.11
+python==3.11.14 
 
-boto3==1.42.3
-botocore==1.42.3
-s3transfer==0.16.0
-python-dotenv==1.2.1  
+# Core dependencies
+torch>=2.0.0
+torchvision>=0.15.0
+numpy>=1.24.0
+pandas>=2.0.0
+
+# Image processing
+opencv-python>=4.8.0
+Pillow>=10.0.0
+
+# Machine learning utilities
+scikit-learn>=1.3.0
+
+# Progress bar
+tqdm>=4.65.0
+
+# Visualization (for notebooks)
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
+# Jupyter notebook
+jupyter>=1.0.0
+notebook>=7.0.0
+
+# Optional: Advanced features (for future improvements)
+# timm>=0.9.0  # For EfficientNet and other models
+# faiss-cpu>=1.7.4  # For fast KNN search
+# albumentations>=1.3.0  # For data augmentation
