pythonの起債をコメントアウト

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Python version requirement: 3.11
 # Tested with Python 3.11
-python==3.11.14 
+# python==3.11.14 
 
 # Core dependencies
 torch>=2.0.0
