feat: 2th_submit
- src/analyze_cv_strategy.py:
  - CV戦略分析スクリプトを新規作成し、データ構造分析、グルーピング候補の分析、リスク分析、推奨CV戦略を出力する機能を追加。

- src/model_arcface.py:
  - ArcFace損失を用いた選手再識別モデルを新規作成。
  - PlayerEmbeddingModel、ArcFaceHead、EMAHelperクラスを実装し、訓練ループ、推論、モデルの保存・読み込み機能を追加。

- src/org/feature_cache.py:
  - 特徴量キャッシュ管理クラスを新規作成し、特徴量のキャッシュ保存、読み込み、クリア、一覧表示機能を実装。

--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ notebooks/bk/*
 *.gsheet
 *.bin
 *.pt
-sample_code/1th_place_solution/*
-!sample_code/1th_place_solution/atmacup20-solution-discussion.ipynb
-sample_code/3th_place_solution/*
-!sample_code/3th_place_solution/takaito.ipynb
+sample_code/*
+!sample_code/.gitkeep
+!sample_code/**/*.ipynb
+!sample_code/**/*.py
 .env
