--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ rich>=10.2.2
 # Visualization (for notebooks)
 matplotlib>=3.7.0
 seaborn>=0.12.0
+japanize-matplotlib>=1.1.3
 
 # Jupyter notebook
 jupyter>=1.0.0
